Fin formulaires personnalisés

--- a/application/views/scripts/couches-cartographiques/list.phtml
+++ b/application/views/scripts/couches-cartographiques/list.phtml
@@ -111,7 +111,7 @@
             <a href='<?php echo $this->url(array('action' => 'add-couche-ign')) ?>' class='btn btn-default btn-lg'>
                 Ajouter une couche IGN
             </a>
-            <div class="alert">
+            <div class="alert alert-warning">
                 <button type="button" class="close" data-dismiss="alert">&times;</button>
                 <strong>Attention !</strong> Le chargement de la page d'ajout d'une couche IGN peut prendre du temps si vous avez renseigné plusieurs clés.
             </div>
