--- a/application/views/scripts/formulaire/partials/champ/list.phtml
+++ b/application/views/scripts/formulaire/partials/champ/list.phtml
@@ -3,7 +3,7 @@
         <div class="panel-heading">
             <h3 class="panel-title"></h3>
         </div>
-        <table class="table table-bordered table-condensed">
+        <table id="saved-fields-table" class="table table-bordered table-condensed">
             <thead>
                 <tr>
                     <th></th>
