--- a/application/views/scripts/formulaire/partials/partial-information-manquante.phtml
+++ b/application/views/scripts/formulaire/partials/partial-information-manquante.phtml
@@ -1,5 +1,5 @@
 <div class='row'>
     <div class='col-md-6 col-md-offset-3'>
-        <div class="alert text-center"><?= $this->message ?></div>
+        <div class="alert alert-warning text-center"><?= $this->message ?></div>
     </div>
 </div>
