Prescriptions/Textes applicables

--- a/application/views/scripts/gestion-prescriptions/formprescription.phtml
+++ b/application/views/scripts/gestion-prescriptions/formprescription.phtml
@@ -72,7 +72,7 @@ echo "
 	</div>
 	<br/>
 	Contenu :
-	<textarea name='PRESCRIPTIONTYPE_LIBELLE' id='LIBELLE_PRESCRIPTIONTYPE' cols='150' rows='10'>".( ($this->do == 'edit')?$this->assoc[0]['PRESCRIPTIONTYPE_LIBELLE']:"")."</textarea>
+	<textarea class='form-control' name='PRESCRIPTIONTYPE_LIBELLE' id='LIBELLE_PRESCRIPTIONTYPE' cols='150' rows='10'>".( ($this->do == 'edit')?$this->assoc[0]['PRESCRIPTIONTYPE_LIBELLE']:"")."</textarea>
 	</div>
 	</form>
 ";
