--- a/application/views/scripts/gestion-prescriptions/showarticlecontenu.phtml
+++ b/application/views/scripts/gestion-prescriptions/showarticlecontenu.phtml
@@ -1,15 +1,12 @@
+<br/><br/>
+<form id='FormPrescriptiontypeArticle_<?= $this->idArticle ?>'>
+    <input type='hidden' name='type' value='prescriptionType' />
+    <ul class='list-unstyled classement prescriptiontypeArticle_<?= $this->idArticle ?>'>
 <?php
-echo "
-	<br/><br/>
-	<form id='FormPrescriptiontypeArticle_".$this->idArticle."' >
-		<input type='hidden' name='type' value='prescriptionType' />
-		<ul class='list-unstyled classement prescriptiontypeArticle_".$this->idArticle."' >
-";
+
 $nbPrescType = count($this->prescriptionType);
-for($i=0; $i < $nbPrescType; $i++)
-{
-	if(isset($this->prescriptionType[$i][0]['ID_PRESCRIPTIONTYPE']))
-	{
+for($i=0; $i < $nbPrescType; $i++):
+	if(isset($this->prescriptionType[$i][0]['ID_PRESCRIPTIONTYPE'])):
 		echo "
 			<li id='prescriptiontype_".$this->prescriptionType[$i][0]['ID_PRESCRIPTIONTYPE']."'  style='border-bottom:1px solid grey;'>
 				<table  class='row'>
@@ -17,8 +14,7 @@ for($i=0; $i < $nbPrescType; $i++)
 
 		$nbAssoc = count($this->prescriptionType[$i]);
 		$cpt = true;
-		for($j=0; $j < $nbAssoc; $j++)
-		{
+		for($j=0; $j < $nbAssoc; $j++):
 			$article = $this->prescriptionType[$i][$j]['LIBELLE_ARTICLE'];
 			$texte = $this->prescriptionType[$i][$j]['LIBELLE_TEXTE'];
 			echo "
@@ -26,8 +22,7 @@ for($i=0; $i < $nbPrescType; $i++)
 					<td class='col-md-3' style='vertical-align:top;'>".$texte."</td>
 					<td class='col-md-3' style='vertical-align:top;'>".$article."</td>
 			";
-			if($cpt)
-			{
+			if($cpt):
 				echo "
 					<td rowspan='".$nbAssoc."' class='col-md-5'>
 						<input type='hidden' name='prescType[]' value='".$this->prescriptionType[$i][0]['ID_PRESCRIPTIONTYPE']."' />
@@ -35,27 +30,23 @@ for($i=0; $i < $nbPrescType; $i++)
 					</td>";
 				echo "<td rowspan='".$nbAssoc."' class='col-md-1' style='vertical-align:top;'><a href='#myModal' role='button' class='editPrescriptionType btn btn-default' data-toggle='modal'>Modifier</a></td>";
 				$cpt = false;
-			}
+            endif;
 			echo "
 				</tr>
 			";
-		}
+		endfor;
 		echo "
 				</table>
 			</li>
 		";
-	}
-}
-echo "
-		</ul>
-	</form>
-	<br/>
-	<a href='#myModal' role='button' class='prescription btn btn-default' id='addPrescriptionArticle_".$this->idArticle."' data-toggle='modal'>Ajouter une prescription</a>
-";
-?>
+	endif;
+endfor ?>
+    </ul>
+</form>
+<br/>
+<button type="button" class='prescription btn btn-default' id='addPrescriptionArticle_<?= $this->idArticle ?>' data-toggle='modal' data-target="#myModal">Ajouter une prescription</button>
 
 <script type="text/javascript">
-
 	$(".classement").sortable({
 		update: function(event, ui) {
 			var formId = $(this).parent();
@@ -73,5 +64,4 @@ echo "
 			});
 		}
 	});
-
 </script>
