--- a/application/views/scripts/gestion-textes-applicables/index.phtml
+++ b/application/views/scripts/gestion-textes-applicables/index.phtml
@@ -1,7 +1,7 @@
 <?php
 echo "
     <h3 class='page-header'>Gestion des textes applicables</h3>
-	<button id='createTexteAppl' class='btn btn-default'><span class='glyphicon glyphicon-plus' aria-hidden='true'></span>&nbsp;Ajouter un texte applicable</button><br/><br/>
+	<button id='createTexteAppl' class='btn btn-primary'><span class='glyphicon glyphicon-plus' aria-hidden='true'></span>&nbsp;Ajouter un texte applicable</button><br/><br/>
 ";
 
 $idTypeMarq = "";
