--- a/application/views/scripts/gestion-prescriptions/gestion-articles-edit.phtml
+++ b/application/views/scripts/gestion-prescriptions/gestion-articles-edit.phtml
@@ -46,7 +46,7 @@
 				<div class='col-md-10'>
 	";
 	echo '
-				<input type="text" name="LIBELLE_ARTICLE" id="LIBELLE_ARTICLE" value="'.$this->articleInfo['LIBELLE_ARTICLE'].'" style="width:100%;"/>
+				<input class="form-control" type="text" name="LIBELLE_ARTICLE" id="LIBELLE_ARTICLE" value="'.$this->articleInfo['LIBELLE_ARTICLE'].'" style="width:100%;"/>
 	';
 	echo "
 				</div>
@@ -56,7 +56,7 @@
 					Visibilité de l'article
 				</div>
 				<div class='col-md-10'>
-					<select name='VISIBLE_ARTICLE'>
+					<select class='form-control' name='VISIBLE_ARTICLE'>
 						<option value='1' ".( ($this->articleInfo['VISIBLE_ARTICLE'] == 1)? "selected": "" )." >Afficher</option>
 						<option value='0' ".( ($this->articleInfo['VISIBLE_ARTICLE'] == 0)? "selected": "" ).">Masquer</option>
 					</select>
