Encore les boutons

--- a/application/views/scripts/calendrier-des-commissions/gestionodj.phtml
+++ b/application/views/scripts/calendrier-des-commissions/gestionodj.phtml
@@ -233,7 +233,7 @@ $(document).ready(function() {
 		buttons: [
             {
                 text: 'Terminer',
-                class: 'btn',
+                class: 'btn btn-default',
                 click: function() {
                     dialogDateCommission.dialog("close");
                     return false;
