--- a/application/views/scripts/calendrier-des-commissions/index.phtml
+++ b/application/views/scripts/calendrier-des-commissions/index.phtml
@@ -252,7 +252,7 @@
                             },
                             {
                                 text: "Fermer la fenêtre d'édition",
-                                class: 'btn',
+                                class: 'btn btn-default',
                                 click: function() {
                                     $("#dialogComm").dialog('close').html('');
                                 }
@@ -381,7 +381,7 @@
                         },
                         {
                             text: "Fermer la fenêtre d'édition",
-                            class: 'btn',
+                            class: 'btn btn-default',
                             click: function() {
                                 $("#dialogComm").dialog('close').html('');
                             }
