--- a/application/views/scripts/dossier/index.phtml
+++ b/application/views/scripts/dossier/index.phtml
@@ -2568,9 +2568,9 @@ $(".delaipresc").live('click', function() {
     </div>
 
     <div class="modal-footer">
-        <a href="#" data-dismiss="modal" class="btn">Annuler</a>
+        <a href="#" data-dismiss="modal" class="btn btn-default">Annuler</a>
         <a href="<?php echo $this->url(array($this->idDossier, 'action' => 'delete')); ?>"
-            class='btn btn-success'>Confirmer</a>
+            class='btn btn-danger'>Confirmer</a>
     </div>
 </div>
 
