--- a/application/views/scripts/dossier/prescription.phtml
+++ b/application/views/scripts/dossier/prescription.phtml
@@ -223,7 +223,7 @@ $(document).ready(function(){
 		buttons: [
             {
                 text: 'Fermer',
-                class: 'btn',
+                class: 'btn btn-default',
                 click: function() {
                     dialogPrescType.html("");
                     dialogPrescType.dialog("close");
@@ -431,7 +431,7 @@ $(document).ready(function(){
             },
             {
                 text: 'Annuler',
-                class: 'btn',
+                class: 'btn btn-default',
                 click: function() {
                     $(this).html("");
                     $(this).dialog("close");
