--- a/application/views/scripts/gestion-prescriptions/index.phtml
+++ b/application/views/scripts/gestion-prescriptions/index.phtml
@@ -254,7 +254,7 @@ $(document).ready(function(){
             },
             {
                 text: 'Annuler',
-                class: 'btn',
+                class: 'btn btn-default',
                 click: function() {
                     dialogCategorie.html("");
                     dialogCategorie.dialog("close");
@@ -335,7 +335,7 @@ $(document).ready(function(){
             },
             {
                 text: 'Annuler',
-                class: 'btn',
+                class: 'btn btn-default',
                 click: function() {
                     dialogTexte.html("");
                     dialogTexte.dialog("close");
@@ -398,7 +398,7 @@ $(document).ready(function(){
             },
             {
                 text: 'Annuler',
-                class: 'btn',
+                class: 'btn btn-default',
                 click: function() {
                     dialogArticle.html("");
                     dialogArticle.dialog("close");
