--- a/application/views/scripts/gestion-textes-applicables/index.phtml
+++ b/application/views/scripts/gestion-textes-applicables/index.phtml
@@ -123,7 +123,7 @@ $(document).ready(function() {
             },
             {
                 text: 'Annuler',
-                class: 'btn',
+                class: 'btn btn-default',
                 click: function() {
                     dialogEditTexteAppl.dialog("close");
                 }
